Remove _site directory from repository and improve build config
- Remove _site/ from git tracking (should only be generated, not committed)
- Update netlify.toml with comprehensive build command:
  * Explicit bundle install with optimizations
  * Node.js and npm install
  * TailwindCSS compilation with npx
  * Jekyll build
- Specify exact versions: Ruby 3.4.4, Bundler 2.7.1, Node 20.18.0
- This should resolve all Netlify build issues

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "bundle install --jobs=4 --retry=3 --path vendor/bundle && npm ci --no-audit --prefer-offline && npx browserslist@latest --update-db || true && npm run build && bundle exec jekyll build --destination _site"
+  command = "bundle install --jobs=4 --retry=3 --path vendor/bundle && npm install && npx tailwindcss -i ./src/input.css -o ./assets/css/tailwind.css && bundle exec jekyll build"
   publish = "_site"
 
 [build.environment]
