Fix navigation URL for 'Nos 9 Compagnons' page
- Change /nos-animaux.html to /nos-animaux/ in navigation config
- Jekyll automatically generates clean URLs without .html extension
- Page is accessible at https://les9poilus.fr/nos-animaux/ (not .html)
- Navigation link now points to the correct URL structure

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ navigation:
   - title: "🏠 Accueil"
     url: "/"
   - title: "🐾 Nos 9 Compagnons"
-    url: "/nos-animaux.html"
+    url: "/nos-animaux/"
   - title: "📖 Nos aventures"
     url: "/blog/"
   - title: "💌 Contact"
