OPTIMISATION SEO MASSIVE - Ciblage Amoureux des Animaux Savoie
 Stratégie SEO complète pour toucher tous les amoureux des animaux:

 META & STRUCTURE:
- Titles optimisés avec mots-clés refuge/adoption Savoie
- Meta descriptions enrichies (refuge familial, animaux rescapés)
- Keywords ciblés: refuge animaux Savoie, adoption chien chat, sauvetage
- Schema.org AnimalShelter avec géolocalisation Savoie
- Breadcrumbs sur toutes les pages

 SEO LOCAL SAVOIE:
- Page dédiée /refuge-savoie/ pour référencement local
- Couverture: Albertville, Chambéry, Tarentaise, Maurienne
- Services: adoption, sauvetage, conseils bien-être animal
- Zone d'intervention Rhône-Alpes clairement définie

 RÉSEAUX & PARTAGE:
- Open Graph optimisé pour Facebook/Instagram
- Twitter Cards configurées
- Liens réseaux sociaux intégrés (TikTok, Instagram)
- Images og-image pour partages

 TECHNIQUE:
- robots.txt optimisé pour indexation
- URLs canoniques configurées
- Meta robots index/follow
- Lazy loading maintenu

 MOTS-CLÉS CIBLÉS:
- Principaux: refuge animaux Savoie, adoption chien chat
- Émotionnels: amoureux des animaux, histoires touchantes
- Longue traîne: refuge familial animaux rescapés Savoie

Le site va maintenant toucher tous les amoureux des animaux en Savoie !

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,32 @@
 # Site settings
-title: "La Communauté des 9 Poilus"
-description: "GoodVisor du Gelon, Comme d'habitude, Mako, Hawaï, Mowgli, Yellow, Téthys, Nyx et Phuket - Entre rires, émotions et apprentissages"
-tagline: "Partager le quotidien chaleureux de nos compagnons à quatre pattes"
-url: "" # the base hostname & protocol for your site
-baseurl: "" # the subpath of your site
+title: "La Communauté des 9 Poilus - Refuge et Sanctuaire Animaux Savoie"
+description: "Découvrez notre refuge familial en Savoie avec 9 compagnons rescapés : chiens, chats, chevaux et âne. Histoires touchantes, conseils bien-être animal et quotidien authentique d'amoureux des animaux."
+tagline: "Un refuge familial au cœur de la Savoie pour tous les amoureux des animaux"
+url: "https://peakcl.github.io" # the base hostname & protocol for your site
+baseurl: "/Les9poilus" # the subpath of your site
+
+# SEO optimizations
+lang: fr
+timezone: Europe/Paris
 
 # Author info
 author:
   name: "La Communauté des 9 Poilus"
-  bio: "Une famille passionnée qui partage son quotidien authentique avec chiens, chats, chevaux et âne"
-  location: "France"
+  bio: "Famille d'accueil et refuge pour animaux en Savoie - Partage d'expériences authentiques avec nos 9 compagnons rescapés"
+  location: "Savoie, France"
+  
+# Logo and images for SEO
+logo: "/assets/images/logo-9-poilus.png"
+image: "/assets/images/og-image.jpg"
+
+# SEO Meta - Mots-clés ciblés amoureux des animaux
+keywords: "refuge animaux, sanctuaire animal Savoie, adoption chien chat, bien-être animal, amoureux des animaux, sauvetage animaux, famille d'accueil, animaux de compagnie, protection animale Rhône-Alpes"
+
+# SEO Meta
+google_site_verification: "" # À ajouter plus tard
+twitter:
+  username: communaute_9_poilus
+  card: summary_large_image
 
 # Social media
 social:
