SOLUTION CSS DÉFINITIVE - src/input.css  output.css
 APPROCHE OPTIMALE ADOPTÉE :
- Système TailwindCSS standard : src/input.css  assets/css/output.css
- Suppression des fichiers SCSS problématiques (main.scss, style.scss, tailwind.css)
- Configuration tailwind.config.js conservée avec toutes les couleurs

 ARCHITECTURE FINALE :
- src/input.css : Source TailwindCSS avec @tailwind directives
- assets/css/output.css : CSS compilé avec front matter Jekyll
- _layouts/default.html : Link vers output.css uniquement
- package.json : Scripts npm mis à jour

 COULEURS PERSONNALISÉES PRÉSERVÉES :
- poilu-soleil, poilu-turquoise, poilu-roy, etc.
- font-heading, font-body, font-script
- Toutes les extensions TailwindCSS intactes

Cette solution évite tous les problèmes de compilation Jekyll/SCSS !

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "npx tailwindcss -i ./src/input.css -o ./assets/css/tailwind.css --watch",
-    "build": "npx tailwindcss -i ./src/input.css -o ./assets/css/tailwind.css",
+    "build-css": "npx tailwindcss -i ./src/input.css -o ./assets/css/output.css --watch",
+    "build": "npx tailwindcss -i ./src/input.css -o ./assets/css/output.css",
     "dev": "npm run build && bundle exec jekyll serve --livereload",
     "build-site": "npm run build && bundle exec jekyll build",
     "serve": "bundle exec jekyll serve",
