--- a/package.json
+++ b/package.json
@@ -23,7 +23,28 @@
     "url": "https://github.com/PeakCL/Les9poilus/issues"
   },
   "homepage": "https://github.com/PeakCL/Les9poilus#readme",
-  "devDependencies": {
-    "tailwindcss": "3.4.14"
-  }
+      "dependencies": {
+        "browserslist": "^4.25.0",
+        "dotenv": "^16.5.0",
+        "electron-to-chromium": "^1.5.167",
+        "escalade": "^3.2.0",
+        "fraction.js": "^4.3.7",
+        "jquery": "^3.7.1",
+        "nanoid": "^3.3.11",
+        "node-fetch": "^3.3.2",
+        "node-releases": "^2.0.19",
+        "normalize-range": "^0.1.2",
+        "picocolors": "^1.1.1",
+        "postcss-value-parser": "^4.2.0",
+        "source-map-js": "^1.2.1",
+        "update-browserslist-db": "^1.1.3"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "autoprefixer": "^10.4.x",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.x.x",
+        "postcss-cli": "^10.x.x",
+        "tailwindcss": "3.4.4"
+    }
 }
