improve css and images

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,35 @@
-# Jekyll
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
-
-# Node modules
+# Dépendances Node.js
 node_modules/
 
-# Sensitive files
-token_github.txt
-*.token
-.env
+# Dossiers de build / distribution
+dist/
+build/
+out/
 
-# OS generated files
+# Ruby / Jekyll
+vendor/
+.bundle/
+
+# Dossier généré par Jekyll
+_site/
+.jekyll-cache/
+.jekyll-metadata
+.sass-cache/
+
+# Dossier local Netlify
+.netlify/
+
+# Fichiers d’environnement
+.env
+.env.local
+
+# Fichiers système (macOS / Windows)
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
+
+# Fichiers temporaires et logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+*.tmp
+*.temp
