--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,18 @@ plugins:
 
 locale: fr_FR.UTF-8
 timezone: Europe/Paris
+
+# Navigation du site
+navigation:
+  - title: "Accueil"
+    url: "/"
+  - title: "Nos Animaux"
+    url: "/nos-animaux/"
+  - title: "Nos Disparus"
+    url: "/nos-disparus/"
+  - title: "Notre Histoire"
+    url: "/notre-histoire/"
+  - title: "Blog"
+    url: "/blog/"
+  - title: "Contact"
+    url: "/contact/"
